test_scores/negative_dimers/features/P07910.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P07910.pkl.xz